tests/fixtures/invalid/pow_dict_bool_str.py
# Cannot call pow() with Dict[str, int], Bool, Str
x = pow({"a": 1}, True, "hello")
